--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,6 @@
         "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.swing.jar",
         "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.web.jar",
         "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar",
-        "d:\\TEODORA\\III\\ISZ\\mysql-connector-java-8.0.15.jar"
+        "connector/mysql-connector-java-8.0.15.jar"
     ]
 }
