--- a/mysql/ConnectionPool.properties
+++ b/mysql/ConnectionPool.properties
@@ -1,6 +1,6 @@
-jdbcURL=jdbc:mysql://localhost:3306/projektni_srednja_skola?&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
-username=referent
-password=referent
+jdbcURL=jdbc:mysql://localhost:3306/bpprojektnizadatak?&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+username=root
+password=Spectre314#
 preconnectCount=5
 maxIdleConnections=25
 maxConnections=25
