--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,19 @@
 {
-    "java.project.referencedLibraries": [
-        "lib/**/*.jar",
-        "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.base.jar",
-        "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.controls.jar",
-        "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.fxml.jar",
-        "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.graphics.jar",
-        "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.media.jar",
-        "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.swing.jar",
-        "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.web.jar",
-        "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar",
-        "connector/mysql-connector-java-8.0.15.jar"
-    ]
+    "java.project.referencedLibraries": {
+        "include": [
+            "lib/**/*.jar",
+            "connector/mysql-connector-java-8.0.15.jar",
+            "javafxlibs/javafx.base.jar",
+            "javafxlibs/javafx.controls.jar",
+            "javafxlibs/javafx.fxml.jar",
+            "javafxlibs/javafx.graphics.jar",
+            "javafxlibs/javafx.media.jar",
+            "javafxlibs/javafx.swing.jar",
+            "javafxlibs/javafx.web.jar",
+            "javafxlibs/javafx-swt.jar"
+        ],
+        "exclude": [
+            "c:\\JAVAFX\\javafx-sdk-11.0.2\\lib\\javafx.web.jar"
+        ]
+    }
 }
